# backend-engineering-101

./: README.md  docker-compose.yml
email-verification/: README.md  main.py  pyproject.toml
order-confirmation/: README.md  main.py  pyproject.toml
order-confirmation/src/: config.py  models.py  orders.py  tasks.py
order-confirmation/src/db/: core.py  entities.py
ticket-booking/: README.md  main.py  pyproject.toml
ticket-booking/migrations/: env.py
ticket-booking/migrations/versions/: 6437703dcc59_init.py
ticket-booking/src/: config.py  logging.py
ticket-booking/src/booking/: models.py  views.py
ticket-booking/src/db/: core.py
ticket-booking/src/db/entities/: booking.py  movie.py  seat.py  show.py  theater.py
ticket-booking/src/movies/: models.py  views.py
ticket-booking/src/shows/: models.py  views.py
ticket-booking/src/theaters/: models.py  views.py
