[project]
name = "order-confirmation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "redis",
    "uvicorn",
    "celery",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "psycopg2-binary"
]
